--- a/races.html
+++ b/races.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Accueil</title>
+        <title>Races</title>
         <link rel="stylesheet" type="text/css" href="./sass/style.css" />
     </head>
     <body>
@@ -12,13 +12,13 @@
             <h1 class="navbar__title">CatSting</h1>
             <ul class="navbar__list">
                 <li class="navbar__item">
-                    <a class="navbar__link" href="#">Accueil</a>
+                    <a class="navbar__link" href="index.html">Accueil</a>
                 </li>
                 <li class="navbar__item">
                     <a class="navbar__link" href="anecdotes.html">Anecdotes</a>
                 </li>
                 <li class="navbar__item">
-                    <a class="navbar__link" href="races.html">Races</a>
+                    <a class="navbar__link" href="#">Races</a>
                 </li>
             </ul>
         </nav>
