start race and anecdote page

--- a/anecdotes.html
+++ b/anecdotes.html
@@ -22,5 +22,16 @@
                 </li>
             </ul>
         </nav>
+        <div class="anecdote-container">
+            <button class="anecdote-container__button">
+                Afficher une anecdote
+            </button>
+            <div class="anecdote-content">
+                <h2 class="anecdote-content__title">Anecdote</h2>
+                <p class="anecdote-content__text">
+                    Mise en forme des information (libre)
+                </p>
+            </div>
+        </div>
     </body>
 </html>
