anecdote page done and add correction cours

--- a/anecdotes.html
+++ b/anecdotes.html
@@ -29,9 +29,10 @@
             <div class="anecdote-content">
                 <h2 class="anecdote-content__title">Anecdote</h2>
                 <p class="anecdote-content__text">
-                    Mise en forme des information (libre)
+                    Mise en forme des informations (libre)
                 </p>
             </div>
         </div>
+        <script src="script_anecdotes.js"></script>
     </body>
 </html>
