starting dark mode

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                     <a class="navbar__link" href="races.html">Races</a>
                 </li>
             </ul>
+            <img class="navbar__darkmode" src="./brightness (1).png" alt="" />
         </nav>
+        <script src="script.js"></script>
     </body>
 </html>
