--- a/races.html
+++ b/races.html
@@ -23,6 +23,8 @@
             </ul>
         </nav>
 
-        <script src="script.js"></script>
+        <ul id="race"></ul>
+
+        <script src="script_races.js"></script>
     </body>
 </html>
