--- a/anecdotes.html
+++ b/anecdotes.html
@@ -21,6 +21,7 @@
                     <a class="navbar__link" href="races.html">Races</a>
                 </li>
             </ul>
+            <img class="navbar__darkmodeImg" src="darkmode.png" alt="" />
         </nav>
         <div class="anecdote-container">
             <button class="anecdote-container__button">
@@ -33,6 +34,7 @@
                 </p>
             </div>
         </div>
+        <script src="script.js"></script>
         <script src="script_anecdotes.js"></script>
     </body>
 </html>
