--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a class="navbar__link" href="races.html">Races</a>
                 </li>
             </ul>
-            <img class="navbar__darkmode" src="./brightness (1).png" alt="" />
+            <img class="navbar__darkmodeImg" src="darkmode.png" alt="" />
         </nav>
         <script src="script.js"></script>
     </body>
