--- a/races.html
+++ b/races.html
@@ -21,10 +21,11 @@
                     <a class="navbar__link" href="#">Races</a>
                 </li>
             </ul>
+            <img class="navbar__darkmodeImg" src="darkmode.png" alt="" />
         </nav>
 
         <ul id="race"></ul>
-
+        <script src="script.js"></script>
         <script src="script_races.js"></script>
     </body>
 </html>
