--- a/races.html
+++ b/races.html
@@ -38,13 +38,12 @@
                         <option value="null">Par pelage</option>
                     </select>
                 </div>
-                <ul onclick="myFunction()" class="race-left__breeds"></ul>
+                <ul onclick="myFunction()" class="race-left__breeds"><li></li></ul>
             </div>
             <div class="race-right">
+                <ul></ul>
             </div>
         </div>
-
-        <button onclick="myFunction()">Click me</button>
                     <p class="demo"></p>
         <script src="script.js"></script>
         <script src="script_races.js"></script>
