fix country fonction select

--- a/races.html
+++ b/races.html
@@ -31,7 +31,7 @@
                     <p class="race-left__results"></p>
                 </div>
                 <div class="race-left__filters">
-                    <select onchange="onInit()" class="country-filter">
+                    <select onchange="filterBreedsByCountry()" class="country-filter">
                         <option value="null">Par pays</option>
                     </select>
                     <select onchange="onInit()" class="pelage-filter">
