fix country fonction coat

--- a/races.html
+++ b/races.html
@@ -34,7 +34,7 @@
                     <select onchange="filterBreedsByCountry()" class="country-filter">
                         <option value="null">Par pays</option>
                     </select>
-                    <select onchange="onInit()" class="pelage-filter">
+                    <select onchange="filterBreedsByCoat()" class="pelage-filter">
                         <option value="null">Par pelage</option>
                     </select>
                 </div>
